# slack-noping

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/noping/: __main__.py  flask_app.py  text.py
src/tests/: test_text.py
