[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-noping"
version = "0.0.2"
dependencies = [
    "slack_bolt~=1.23.0",
    "Flask~=3.1.1",
    "python-dotenv~=1.1.1",
]
requires-python = ">=3.13"
authors = [
  {name = "twonum", email = "two@twonum.org"},
]
maintainers = [
  {name = "twonum", email = "two@twonum.org"}
]
description = "A Slack app that lets you link to a user without mentioning (pinging) them using /np"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
keywords = ["slack"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://slack-noping.twonum.org"
Repository = "https://github.com/twonfi/slack-noping.git"
"Bug Tracker" = "https://github.com/twonfi/slack-noping/issues"
